objects/Subsidary__c.object
<CustomObject>
    <fields>
        <fullName>Active__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Active</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Billing_Invoice_Footer__c</fullName>
        <label>Billing Invoice Footer</label>
        <length>10000</length>
        <type>Html</type>
    </fields>
    <fields>
        <fullName>Country__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>What it Does? Store the country related to Subsidiary
Downstream Impact? To be used by PureCloud Billing
Which department is owner? IT/PureCloud Team</description>
        <label>Country</label>
        <referenceTo>Country__c</referenceTo>
        <relationshipLabel>Subsidaries</relationshipLabel>
        <relationshipName>Subsidaries</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Description__c</fullName>
        <label>Description</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <label>Subsidary</label>
    <listViews>
        <fullName>All</fullName>
        <columns>NAME</columns>
        <columns>Active__c</columns>
        <columns>Description__c</columns>
        <columns>Country__c</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
        <language>en_US</language>
    </listViews>
    <nameField>
        <label>Subsidary Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Subsidaries</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>